# yamdctbot

./: .env.example  .gitignore  README.md  aiogram_service.py  db.py  fastapi_service.py  main.py  models.py  pyproject.toml  requirements.txt  ya_client.py
routers/: inline.py  login.py  start.py  track.py
templates/: auth.html  error.html  redirect.html  welcome.html
utlis/: current_track.py  search.py
