[project]
name = "tgyandbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.40",
    "yandex-music>=2.2.0",
]
